--- a/css/main.css
+++ b/css/main.css
@@ -102,12 +102,12 @@ p {
   padding: 0.15em 0em 0em 0em;
 }
 footer{
-background-color: #ffe524;
-margin: 0;
-padding: 1em;
+  background-color: #ffe524;
+  margin: 0;
+  padding: 1em;
 }
 
-div {
+.whatever {
   padding-top: 0.5em;
   padding-bottom: 0.5em;
 }
@@ -136,5 +136,6 @@ blockquote {
   font-style: italic;
   margin-top: 0;
   color: #b2a215;
-  font-size: 1.25em;
+  font-size: 1em;
+  font-family: arial, sans-serif;
 }
